[project]
name = "psorl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d]>=1.2.0",
    "pymoo>=0.6.1.5",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.12.3",
]

[tool.uv.sources]
pymoo = { git = "https://github.com/gideonoludeyi/pymoo" }
